[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-generator"
version = "0.1.0"
description = "Generate synthetic datasets from requirements documents"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "typer[all]>=0.12",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "rapidfuzz>=3.0",
    "deepeval>=3.0",
    "ragas>=0.4",
    "giskard[llm]>=2.0",
    "evidently>=0.4",
    "langchain>=0.2",
    "pandas>=2.0",
    "chromadb>=1.0",
    "allpairspy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dataset_generator = ["py.typed"]
